Fix Contact photos being stretched and squeezed when non-square

--- a/css/style.scss
+++ b/css/style.scss
@@ -645,6 +645,7 @@ tr.selected td {
     min-height: 70px;
     max-width: 70px;
     max-height: 70px;
+    object-fit: cover;
     border-radius: 50%;
 }
 .tooltip-contact-content {
